# CMake_Template

./: .gitignore  CMakeLists.txt  Makefile  conanfile.txt  info.md
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake
configured/: config.hpp.in
src/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
tests/: CMakeLists.txt  main.cc
